fix: fixes backgorund blur not clipping on browser's border

--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -69,7 +69,7 @@
 }
 
 .topBlur {
-    position: absolute;
+    position: fixed;
     width: 50vw;
     height: 50vw;
     min-width: 350px;
@@ -82,11 +82,10 @@
 }
 
 .bottomBlur {
-    position: absolute;
+    position: fixed;
     width: 70vw;
     height: 50vw;
     min-width: 350px;
-    min-width: 250px;
     top: 246px;
     right: -25vw;
     border-radius: 764px;
